--- a/mockups/public/index.html
+++ b/mockups/public/index.html
@@ -41,6 +41,12 @@
         </section>
       </div>
     </main>
+    <footer class="site-footer">
+      <div class="site-footer__attribution">
+        <div>Powered by:</div>
+        <a href="https://www.themoviedb.org/"><img src="https://www.themoviedb.org/assets/2/v4/logos/v2/blue_long_1-8ba2ac31f354005783fab473602c34c3f4fd207150182061e425d366e4f34596.svg" /></a>
+      </div>
+    </footer>
     <script src="data.js"></script>
     <script src="index.js"></script>
   </body>
