feat: more view page design work

--- a/mockups/public/view.html
+++ b/mockups/public/view.html
@@ -17,10 +17,17 @@
     <main class="page page__view">
       <section class="hero" style="background-image:url('https://www.themoviedb.org/t/p/original/bqFO92d1idNAI4OOncUrduz2YoA.jpg')">
         <div class="hero__overview">
-          <div class="hero__thumbnail">
-            <img src="https://www.themoviedb.org/t/p/original/qfx2EENW1sOpKNVKLzr7VOhlxkt.jpg" />
+          <div>
+            <div class="hero__thumbnail">
+              <img src="https://www.themoviedb.org/t/p/original/qfx2EENW1sOpKNVKLzr7VOhlxkt.jpg" />
+            </div>
+            <h1 class="hero__title">Hackers <span class="hero__year">(1995)</span></h1>
           </div>
-          <h1 class="hero__title">Hackers <span class="hero__year">(1995)</span></h1>
+          <ul class="hero__details">
+            <li><span>Type</span>Movie</li>
+            <li><span>Runtime</span>1h 47m</li>
+            <li><span>Production Country</span>US</li>
+          </ul>
         </div>
       </section>
       <div class="row">
@@ -54,6 +61,5 @@
       </div>
     </footer>
     <script src="data.js"></script>
-    <script src="index.js"></script>
   </body>
 </html>
