refactor: view page hero design

--- a/mockups/public/view.html
+++ b/mockups/public/view.html
@@ -17,14 +17,13 @@
     <main class="page page__view">
       <section class="hero" style="background-image:url('https://www.themoviedb.org/t/p/original/bqFO92d1idNAI4OOncUrduz2YoA.jpg')">
         <div class="hero__overview">
-          <div>
-            <div class="hero__thumbnail">
-              <img src="https://www.themoviedb.org/t/p/original/qfx2EENW1sOpKNVKLzr7VOhlxkt.jpg" />
-            </div>
-            <h1 class="hero__title">Hackers <span class="hero__year">(1995)</span></h1>
+          <div class="hero__thumbnail">
+            <img src="https://www.themoviedb.org/t/p/original/qfx2EENW1sOpKNVKLzr7VOhlxkt.jpg" />
           </div>
+          <h1 class="hero__title">Hackers <span class="hero__year">(1995)</span></h1>
           <ul class="hero__details">
             <li><span>Type</span>Movie</li>
+            <li><span>Released</span>March 4, 1995</li>
             <li><span>Runtime</span>1h 47m</li>
             <li><span>Production Country</span>US</li>
           </ul>
